--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.9",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
@@ -20,10 +21,13 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@ngrx/effects": "^9.2.1",
+    "@ngrx/router-store": "^10.1.2",
     "@ngrx/store": "^9.0.0",
     "@ngrx/store-devtools": "^9.2.1",
     "bootstrap": "^4.5.0",
     "js-search": "^2.0.0",
+    "moment-timezone": "^0.5.33",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
